FIX: Sidebar on mobile;

--- a/src/components/layouts/PrivateLayout/PrivateLayout.module.sass
+++ b/src/components/layouts/PrivateLayout/PrivateLayout.module.sass
@@ -6,4 +6,4 @@
     @apply w-full h-full grid grid-flow-col grow overflow-hidden
 
     @screen lg
-      grid-template-columns: 15rem 1fr
+      grid-template-columns: 16rem 1fr
