--- a/src/components/organisms/Header/HeaderCommon/HeaderCommon.module.sass
+++ b/src/components/organisms/Header/HeaderCommon/HeaderCommon.module.sass
@@ -1,2 +1,2 @@
 .wrapper
-  @apply w-full bg-neutral-800 flex justify-between py-4 px-3
+  @apply w-full bg-neutral-800 flex justify-between py-4 px-3 items-center
