--- a/src/components/organisms/Sidebar/Sidebar.module.sass
+++ b/src/components/organisms/Sidebar/Sidebar.module.sass
@@ -1,9 +1,13 @@
 .wrapper
   background-color: #f9fbf1
-  @apply fixed -left-full inline-flex flex-col justify-between py-5 px-3 border-r border-r-neutral-300
+  height: calc(100vh - 4rem)
+  @apply fixed -left-full inline-flex flex-col justify-between py-5 px-3 border-r border-r-neutral-300 transition-all ease-in-out duration-500 w-fit
+
+  &--show
+    @apply left-0
 
   @screen lg
-    @apply static
+    @apply static w-full
 
   &__nav
     @apply flex flex-col gap-y-6
